--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- header section with navbar and hero section content------------------------------------------ -->
     <header>
-      <nav>
+      <nav class="display">
         <div class="nav-logo">
           <img src="/photos/Logo.png" alt="navbar logo image" class="nav-img" />
         </div>
@@ -28,6 +28,12 @@
           </ul>
           <button class="nav-btn">FREE TRIAL</button>
         </div>
+      </nav>
+
+      <nav class="sm-display">
+        <button class="nav-btn sm-nav-btn">FREE TRIAL</button>
+
+        <i class="fa-regular fa fa-bars"></i>
       </nav>
 
       <section class="hero-section">
@@ -51,8 +57,8 @@
     </header>
 
     <!-- saas content section -->
-    <section class="hero-section">
-      <div class="hero-img-container">
+    <section class="hero-section saas">
+      <div class="hero-img-container sm-hero-img-container">
         <img
           src="/photos/SAAS landing page/Saas illustration-01.svg"
           alt="saas image"
